--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -42,11 +42,11 @@
         </tr>
         <tr>
             <td>2:00 - 3:00</td>
-            <td colspan="5">Project / Practice / Assignment</td>
+            <td colspan="5" rowspan="2">Project / Practice / Assignment</td>
         </tr>
         <tr>
             <td>3:00 - 4:30</td>
-            <td colspan="5"></td>
+            <!-- <td colspan="5"></td> -->
         </tr>
         <tr>
             <td>4:30 - 5:00</td>
