--- a/Day9-JS_Project1/index.html
+++ b/Day9-JS_Project1/index.html
@@ -3,27 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube clone</title>
+    <title>YouTube Clone</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
     <header>
-        <input type="text" name="search-text"  oninput="handleSearch(event)" id="searchBox">
-        <button onclick="handleSearchButton()">
-            Search
-        </button>
+        <div class="header-left">
+            <div class="logo">
+                <i class="fab fa-youtube"></i> <!-- YouTube Logo -->
+                <span class="youtube-text">YouTube</span>
+                <span class="country-code">IN</span>
+            </div>
+        </div>
+        <div class="search-container">
+            <input type="text" id="searchBox" placeholder="Search">
+            <button><i class="fa fa-magnifying-glass"></i></button>
+        </div>
     </header>
 
-    <aside>
-     
-        <a href="./history.html">
-            <h3>History</h3>
-        </a>
-       
+    <aside id="sidebar">
+        <a href="./index.html" class="sidebar-item"><i class="fa fa-home"></i> <span>Home</span></a>
+        <a href="./history.html" class="sidebar-item"><i class="fa fa-history"></i> <span>History</span></a>
     </aside>
-    <main>
 
+    <main>
+        <!-- Video Content will go here -->
     </main>
+
     <script src="script.js"></script>
 </body>
 </html>
